# RAG_System

./: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  router.py  routes_chat.py  routes_code.py  routes_health.py  routes_kb.py  routes_playground.py  routes_retrieval.py
app/code_tests/: demo-sum.json
app/core/: audit.py  config.py  exception_handlers.py  logging.py  metrics.py  policies.py  prompts.py  request_context.py  security.py
app/db/: __init__.py  base.py  bootstrap.py  models.py  session.py
app/db/migrations/: env.py
app/db/repositories/: __init__.py  chat.py  (+1 more)
app/kb/: __init__.py  chunking.py  cleaners.py  ingest.py  loaders.py  models.py
app/providers/: __init__.py  compatible_api_llm_provider.py  database_retriever.py  docker_code_runner.py  factory.py  fallback_retriever.py  interfaces.py  jina_embedding_provider.py  lexical_retrieval.py  mock_embedding_provider.py  mock_llm_provider.py  openai_llm_provider.py  pgvector_retriever.py  retrieval_cache.py  stub_code_runner.py
app/schemas/: chat.py  code.py  common.py  kb.py  retrieval.py
app/services/: __init__.py  chat_service.py  code_service.py  container.py  dialogue_orchestrator.py  hint_service.py  knowledge_ingestion_service.py  llm_service.py  runtime_diagnostics.py  session_store.py
app/tests/: conftest.py
cli/: __init__.py  client.py
docker/: app.Dockerfile  runner-python.Dockerfile
rag_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+27 files in other folders)
